rgbds-0.6.1/test/asm/pushs.err
error: pushs.asm(5):
    Cannot output data outside of a SECTION
error: Assembly aborted (1 error)!
